[package]
name = "adventure-escape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8"
rand = "0.8"
bevy-debug-text-overlay = "3.0"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!